--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.3.1",
+    "@discordjs/opus": "^0.5.3",
+    "@discordjs/voice": "^0.8.0",
+    "discord.js": "^13.6.0",
     "dotenv": "^8.2.0",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.10",
     "nodemon": "^2.0.4",
     "opusscript": "^0.0.6",
     "ytdl-core": "^4.11.0"
